--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,35 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.usp.each.saeg</groupId>
 	<artifactId>bytecode-analysis</artifactId>
-	<version>0.5</version>
+	<version>0.5.1-SNAPSHOT</version>
 	<name>bytecode-analysis</name>
+	<url>https://github.com/andrioli/bytecode-analysis</url>
+	<description>A prototype-library based on ASM 4 that computes definitions/uses of each instruction</description>
+
+	<scm>
+		<url>https://github.com/andrioli/bytecode-analysis</url>
+		<connection>scm:git:https://github.com/andrioli/bytecode-analysis.git</connection>
+		<developerConnection>scm:git:git@github.com:andrioli/bytecode-analysis.git</developerConnection>
+	</scm>
+
+	<issueManagement>
+		<system>GitHub Issues</system>
+		<url>https://github.com/andrioli/bytecode-analysis/issues</url>
+	</issueManagement>
+
+	<developers>
+		<developer>
+			<email>roberto.andrioli@gmail.com</email>
+			<name>Roberto Araujo</name>
+			<url>https://github.com/andrioli</url>
+			<id>andrioli</id>
+		</developer>
+	</developers>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -15,6 +42,11 @@
 					<source>1.6</source>
 					<target>1.6</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.4.2</version>
 			</plugin>
 		</plugins>
 	</build>
