--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.usp.each.saeg</groupId>
 	<artifactId>bytecode-analysis</artifactId>
-	<version>0.5.2</version>
+	<version>0.5.3-SNAPSHOT</version>
 	<name>bytecode-analysis</name>
 	<url>https://github.com/andrioli/bytecode-analysis</url>
 	<description>A prototype-library based on ASM 4 that computes definitions/uses of each instruction</description>
@@ -11,7 +11,7 @@
 		<url>https://github.com/andrioli/bytecode-analysis</url>
 		<connection>scm:git:https://github.com/andrioli/bytecode-analysis.git</connection>
 		<developerConnection>scm:git:git@github.com:andrioli/bytecode-analysis.git</developerConnection>
-	  <tag>bytecode-analysis-0.5.2</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<issueManagement>
