--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>br.usp.each.saeg</groupId>
 	<artifactId>bytecode-analysis</artifactId>
-	<version>0.5.4</version>
+	<version>0.5.5-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>bytecode-analysis</name>
 	<url>https://github.com/andrioli/bytecode-analysis</url>
@@ -27,7 +27,7 @@
 		<url>https://github.com/andrioli/bytecode-analysis</url>
 		<connection>scm:git:https://github.com/andrioli/bytecode-analysis.git</connection>
 		<developerConnection>scm:git:git@github.com:andrioli/bytecode-analysis.git</developerConnection>
-		<tag>bytecode-analysis-0.5.4</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 <!--
